--- a/templates/auth/email_verification_msg.html
+++ b/templates/auth/email_verification_msg.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     
     <title>Verify Email address</title>
 
     <style>
         .format-font {
-            font-family: 'Montserrat', sans-serif; 
+            font-family: Poppins, sans-serif; 
         }
         .my-container {
             margin: 10px;
