--- a/templates/report/links.html
+++ b/templates/report/links.html
@@ -1,6 +1,6 @@
 <div class="report-links">
-  <a href="" class="btn btn-dark btn-sm">Export PDF</a>
-  <a href="" class="btn btn-info btn-sm">Export CSV</a>
+  <a href="{% block report_url %}{% endblock report_url %}" class="btn btn-primary btn-sm">Export PDF</a>
+  {% comment %} <a href="" class="btn btn-info btn-sm">Export CSV</a>
 
-  <a href="" class="btn btn-success btn-sm">Preview</a>
+  <a href="" class="btn btn-success btn-sm">Preview</a> {% endcomment %}
 </div>
