--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -11,10 +11,8 @@
     Tip 2: you can also add an image using data-image tag
   -->
   <div class="logo">
-    <a href="http://www.creative-tim.com/" class="simple-text logo-mini">ND</a>
-    <a href="http://www.creative-tim.com/" class="simple-text logo-normal"
-      >NewDoor</a
-    >
+    <a href="" class="simple-text logo-mini">ND</a>
+    <a href="" class="simple-text logo-normal">NewDoor</a>
   </div>
 
   <div class="sidebar-wrapper ps ps--active-y">
@@ -39,7 +37,7 @@
             </span>
           {% else %}
             <span>
-              {{ request.user.username }}
+              {{ request.user.username|capfirst }}
               <b class="caret"></b>
             </span>
           {% endif %}
@@ -74,7 +72,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'tenant_dashboard' %} ">
           <i class="material-icons">dashboard</i>
-          <p>Tenant_Dashboard</p>
+          <p>Tenant Dashboard</p>
         </a>
       </li>
       {% endif %} {% if request.user.profile.is_manager or request.user.is_superuser %}
@@ -194,7 +192,9 @@
       <li class="nav-item">
         <a class="nav-link d-flex align-items-center" href="{% url 'report' %}">
           <i class="material-icons">history</i>
-          <span class="sidebar-normal"> Reports </span>
+          <p>
+            Reports
+          </p>
         </a>
       </li>
 
