--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -482,7 +482,7 @@
         <div class="card-icon">
           <i class="material-icons" style="width: initial">account_balance</i>
         </div>
-        <h4 class="card-title">4 Top Property </h4>
+        <h4 class="card-title">4 Top Property</h4>
       </div>
       <div class="card-body">
         <div class="toolbar">
@@ -516,29 +516,30 @@
                         Property Name
                       </th>
                       <th
-                      class="sorting"
-                      tabindex="0"
-                      aria-controls="datatables"
-                      rowspan="1"
-                      colspan="1"
-                      style="width: 77px"
-                      aria-label="Age: activate to sort column ascending"
-                    >
-                      Units
-                    </th>
+                        class="sorting"
+                        tabindex="0"
+                        aria-controls="datatables"
+                        rowspan="1"
+                        colspan="1"
+                        style="width: 77px"
+                        aria-label="Age: activate to sort column ascending"
+                      >
+                        Units
+                      </th>
                     </tr>
                   </thead>
                   <tbody>
-                    {% if properties %}
-                      
-                      {% for property in properties %}
-                      <tr role="row" class="odd">
-                        <th tabindex="0" class="sorting_1">{{property.property_name}}</th>
-                        <td>{{ property.unit_set.all.count }}</td>
-                      </tr>
-                      {% endfor %}
-                    {% else %}
-                      <tr class="text-center"><td colspan="5">No Properties yet</td></tr>
+                    {% if properties %} {% for property in properties %}
+                    <tr role="row" class="odd">
+                      <th tabindex="0" class="sorting_1">
+                        {{property.property_name}}
+                      </th>
+                      <td>{{ property.unit_set.all.count }}</td>
+                    </tr>
+                    {% endfor %} {% else %}
+                    <tr class="text-center">
+                      <td colspan="5">No Properties yet</td>
+                    </tr>
                     {% endif %}
                   </tbody>
                 </table>
@@ -1335,119 +1336,55 @@
         <div class="toolbar">
           <!--        Here you can write extra buttons/actions for the toolbar              -->
         </div>
-        <div class="material-datatables">
-          <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
-            <div class="row">
-              <div class="col-sm-12">
-                <table
-                  id="datatables"
-                  class="table table-striped table-no-bordered table-hover dataTable dtr-inline"
-                  cellspacing="0"
-                  width="100%"
-                  style="width: 100%"
-                  role="grid"
-                  aria-describedby="datatables_info"
-                >
-                  <thead>
-                    <tr role="row">
-          
-                      <th
-
-                        tabindex="0"
-                        aria-controls="datatables"
-                        rowspan="1"
-                        colspan="1"
-                        aria-label="Position: activate to sort column ascending"
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="material-datatables">
+              <table
+                id="datatables"
+                class="table table-striped table-no-bordered table-hover"
+                cellspacing="0"
+                width="100%"
+                style="width: 100%"
+              >
+                <thead>
+                  <tr>
+                    <th>Paid amount</th>
+                    <th>Due amount</th>
+                    <th>Date</th>
+                    <th>Next Payment Date</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% if payments %} 
+                  {% for payment in payments %}
+                  <tr>
+                    <td>{{ payment.amount|intcomma }}</td>
+                    <td>{{ payment.remain_amount }}</td>
+                    <td>{{ payment.paid_date|date:'d F Y' }}</td>
+                    <td>{{ payment.paid_date|date:'d F Y' }}</td>
+                    <td class="text-center">
+                      <span class="badge badge-success badge-pill"
+                        >{{ payment.status }}</span
                       >
-                        Paid amount
-                      </th>
-                      <th
-
-                        tabindex="0"
-                        aria-controls="datatables"
-                        rowspan="1"
-                        colspan="1"
-
-                        aria-label="Office: activate to sort column ascending"
+                    </td>
+                    <td class="text-center">
+                      <a
+                        href="#"
+                        class="btn btn-link btn-warning btn-just-icon edit"
+                        ><i class="material-icons">dvr</i></a
                       >
-                        Due amount
-                      </th>
-                      <th
-
-                        tabindex="0"
-                        aria-controls="datatables"
-                        rowspan="1"
-                        colspan="1"
-
-                        aria-label="Age: activate to sort column ascending"
-                      >
-                        Date
-                      </th>
-                      <th
-
-                        tabindex="0"
-                        aria-controls="datatables"
-                        rowspan="1"
-                        colspan="1"
-
-                        aria-label="Age: activate to sort column ascending"
-                      >
-                        Next Payment Date
-                      </th>
-                      <th
-
-                        tabindex="0"
-                        aria-controls="datatables"
-                        rowspan="1"
-                        colspan="1"
-   
-                        aria-label="Date: activate to sort column ascending"
-                      >
-                        Status
-                      </th>
-                      <th
-                        class="text-center"
-                        tabindex="0"
-                        aria-controls="datatables"
-                        rowspan="1"
-                        colspan="2"
-     
-                        aria-label="Actions: activate to sort column ascending"
-                      >
-                        Actions
-                      </th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    
-                    {% if payments %}
-                    
-                    {% for payment in payments %}
-                    <tr role="row" class="odd">
-                      <td>{{ payment.amount|intcomma }}</td>
-                      <td>{{ payment.remain_amount }}</td>
-                      <td>{{ payment.paid_date|date:'d F Y' }}</td>
-                      <td>{{ payment.paid_date|date:'d F Y' }}</td>
-                      <td class="text-center"><span class="badge badge-success badge-pill">{{ payment.status }}</span></td>
-                      <td class="text-center">
-                        <a
-                          href="#"
-                          class="btn btn-link btn-warning btn-just-icon edit"
-                          ><i class="material-icons">dvr</i></a
-                        >
-                      </td>
-                    </tr>
-                    {% endfor %}
-                      
-                 
-                    {% else %}
-                    <tr class="text-center"><td colspan="6">No payments yet</td></tr>
-                    {% endif %}
-                      
-                    
-                  </tbody>
-                </table>
-              </div>
+                    </td>
+                  </tr>
+                  {% endfor %} 
+                  {% else %}
+                  <tr class="text-center">
+                    <td colspan="6">No payments yet</td>
+                  </tr>
+                  {% endif %}
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
@@ -1465,27 +1402,25 @@
         <h4 class="card-title">Notification</h4>
       </div>
       <div class="card-body">
-        {% if units.count > 0 %} 
-          {% if unit.tenantcontract.count > 0 %}
-            {% for unit in units %} 
-              {% if unit.occupancy_type.occupancy_type.lower == 'create contract' %}
-                <div class="mgs d-flex mt-2">
-                  <i class="material-icons pr-2 text-danger"> feedback </i>
-                  <a href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}" style="font-weight: 600;" class="link text-dark"
-                    >A Contract needs to be created for unit flat <span class="text-success">{{unit.flat}}</span>
-                  </a>
-                </div>
-              {% else %}
-                <p class="text-center" style="font-weight: 600;">No notifications</p>
-              {% endif %}
-              
-            {% endfor %}
-          {% else %}
-            <p class="text-center" style="font-weight: 600;">No notifications</p> 
-          {% endif %}
+        {% if units.count > 0 %} {% if unit.tenantcontract.count > 0 %} 
+        {% for unit in units %} {% if unit.occupancy_type.occupancy_type.lower == 'create contract' %}
+        <div class="mgs d-flex mt-2">
+          <i class="material-icons pr-2 text-danger"> feedback </i>
+          <a
+            href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
+            style="font-weight: 600"
+            class="link text-dark"
+            >A Contract needs to be created for unit flat
+            <span class="text-success">{{unit.flat}}</span>
+          </a>
+        </div>
         {% else %}
-          <p class="text-center" style="font-weight: 600;">No notifications</p> 
-        {% endif %} 
+        <p class="text-center" style="font-weight: 600">No notifications</p>
+        {% endif %} {% endfor %} {% else %}
+        <p class="text-center" style="font-weight: 600">No notifications</p>
+        {% endif %} {% else %}
+        <p class="text-center" style="font-weight: 600">No notifications</p>
+        {% endif %}
       </div>
       <!-- end content-->
     </div>
